# anlp-misis-25

./: .gitignore  pyproject.toml  run_qwen_vllm.sh
config/anlp2/data_processing/: no.json  preproc_lemma.json  preproc_stem.json
config/anlp2/model/: catboost.json  logreg.json
config/anlp2/vectorizer/: bow.json  fasttext.json  tfidf.json  tfidf_bigrams.json  tfidf_trigrams.json
config/anlp3/classification/: bert.json  roberta.json
config/anlp3/span_extraction/: bert.json
config/anlp4/: bert-pretrain.json
misisnlp/anlp2/: eval_fasttext.py  loader.py  models.py  prepare_data_for_fasttext.py  processor.py  train.py  vectorizers.py
misisnlp/anlp3/: config.py  data.py  model.py  train_cls.py  train_span_extraction.py  trainable.py
misisnlp/anlp4/: data.py  train_tokenizer.py  try_tokenizer.py
misisnlp/anlp4/bert/: config.py  data.py  train.py  trainable.py
misisnlp/anlp4/blocks/: attention.py  config.py  embed.py  ffn.py  fulltransformer.py
misisnlp/anlp5/: rotary_embeddings.py
misisnlp/anlp56/: att_mask.py
misisnlp/anlp56/blocks/: attention.py  config.py  ffn.py  ffn_moe.py  rotary_embeddings.py
misisnlp/anlp7/: chat_template_demo.py  structured_outputs.py  tools.py
misisnlp/trainer/: trainer.py
