[project]
name = "misis-nlp-25"
version = "0.1.0"
description = ""
authors = [
    {name = "Афанасьев Максим Александрович",email = "some@email.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "razdel (>=0.5.0,<0.6.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pymorphy3 (>=2.0.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fasttext (>=0.9.3,<0.10.0)",
    "torch (>=2.8.0,<3.0.0)",
    "transformers (>=4.56.2,<5.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "accelerate (>=1.10.1,<2.0.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "bitsandbytes (>=0.47.0,<0.48.0)",
    "torchdata (>=0.11.0,<0.12.0)",
    "aim (==3.29.1)",
    "datasets (>=4.1.1,<5.0.0)",
    "rotary-embedding-torch (>=0.8.9,<0.9.0)",
    "vllm (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
